--- a/store/blocks/components/trending.jsonc
+++ b/store/blocks/components/trending.jsonc
@@ -55,7 +55,7 @@
         "tablet": 3,
         "phone": 1
       },
-      "infinite": false,
+      "infinite": true,
       "fullWidth": true,
       "blockClass": "shelfTrending"
     }
